<resources>
    <string name="app_name">Digi Gate</string>

    <!--Base Activity-->
    <string name="back_button_description">Back button to navigate previous activity</string>
    <string name="logout">Logout</string>
    <string name="menu_icon_description">Image of three dots Menu Icon</string>

    <!--NammaApartment security E-Intercom-->
    <string name="capture_photo">Capture Photo</string>
    <string name="send_notification">Send Notification</string>
    <string name="mobile_number">User\'s Mobile Number</string>
    <string name="visitor_mobile_number">Visitor Mobile Number</string>
    <string name="name_validation">Please Enter Name</string>
    <string name="mobile_number_validation">Please Enter Mobile Number</string>
    <string name="accept_alphabets">Accept Alphabets Only.</string>
    <string name="upload_image">Please Upload Image</string>
    <string name="e_intercom_type">E-Intercom Type:</string>
    <string name="notifying_user">Notifying User</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string-array name="e_intercom_type_list">
        <item>@string/select_any_one</item>
        <item>@string/guest</item>
        <item>@string/daily_service</item>
        <item>@string/family_member</item>
        <item>@string/cab</item>
        <item>@string/package_vendor</item>
    </string-array>

    <string name="select_any_one">Select any one</string>
    <string name="guest">Guest Approval</string>
    <string name="daily_service">Daily Service Approval</string>
    <string name="family_member">Family Member Approval</string>
    <string name="cab">Cab Approval</string>
    <string name="package_vendor">Package Approval</string>
    <string name="invalid_user_title">Invalid User Message</string>
    <string name="invalid_user_message">No record found for entered User\'s mobile number.</string>

    <!--NammaApartment security Home Activity-->
    <string name="e_intercom">E - Intercom</string>
    <string name="e_intercom_category">Categories</string>
    <string name="visitors_validation">Visitors Validation</string>
    <string name="daily_services_validation">Daily Services Validation</string>
    <string name="gate_notification">Gate Notification</string>
    <string name="society_member">Society Member</string>
    <string name="emergency">Emergency</string>
    <string name="vehicle_validation">Vehicle Validation</string>
    <string name="images_of_nammaapartment_security_services">Images of Namma Apartment Security Services</string>

    <!--Visitors And Daily Services Validation Activities-->
    <string name="phone_number">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="verify_visitor">Verify Visitor</string>
    <string name="verify_daily_services">Verify Daily Service</string>
    <string name="visitor_name">Visitor Name:</string>
    <string name="flat_to_visit">Flat to Visit:</string>
    <string name="invited_by">Invited By:</string>
    <string name="allow_visitor">Allow Visitor</string>
    <string name="image_success">Image to indicate for successful visitor validation</string>
    <string name="image_failed">Image to indicate for failed visitor validation</string>
    <string name="invalid_visitor">Invalid Visitor</string>
    <string name="invalid_daily_service">Invalid Daily Service</string>
    <string name="not_entered">Not Entered</string>
    <string name="entered">Entered</string>
    <string name="left">Left</string>
    <string name="visitor_has_left_society">Visitor has already Left the Society</string>
    <string name="service_type">Type:</string>
    <string name="allow_daily_service">Allow Daily Service</string>
    <string name="daily_service_has_left_society">Daily Service has already Left the Society</string>
    <string name="visitor_left">Visitor Left</string>
    <string name="daily_service_left">Daily Service Left</string>
    <string name="visitor_notification_title">Visitor Notification</string>
    <string name="visitor_arrival_notification_message">Visitor arrival notification has been sent to user.</string>
    <string name="visitor_left_notification_message">Visitor left notification has been sent to user.</string>
    <string name="daily_service_notification_title">Daily Service Notification</string>
    <string name="daily_service_arrival_notification_message">Daily service arrival notification has been sent to user.</string>
    <string name="daily_service_left_notification_message">Daily service left notification has been sent to user.</string>
    <string name="visitor_record_not_found">Visitor record not found.</string>
    <string name="daily_service_record_not_found">Daily Service record not found.</string>

    <!--Gate Notification Screen Activity-->
    <string name="expected_cab_arrivals">Expected Cab Arrivals</string>
    <string name="expected_package_arrivals">Expected Package Arrivals</string>
    <string name="things_given_to_guest">Things Given To Guest</string>
    <string name="things_given_to_daily_services">Things Given To Daily Services</string>
    <string name="service_icon">Service Icon</string>

    <!--Expected Arrivals Activity-->
    <string name="cab_number">Cab Number</string>
    <string name="resident_mobile_number">Resident Mobile Number</string>
    <string name="verify_cab">Verify Cab</string>
    <string name="verify_package_vendor">Verify Package Vendor</string>
    <string name="booked_by">Booked By:</string>
    <string name="flat_number">Flat Number</string>
    <string name="date_to_visit">Date To Visit:</string>
    <string name="time_to_visit">Time To Visit:</string>
    <string name="allow_cab_driver">Allow Cab Driver</string>
    <string name="dont_allow_vehicle_to_enter">Don\'t allow this vehicle to enter into Society</string>
    <string name="cab_left_society">Cab has already Left the Society</string>
    <string name="ordered_by">Ordered By:</string>
    <string name="allow_package_vendor">Allow Package Vendor</string>
    <string name="dont_allow_package_vendor">Don\'t allow Package Vendor to enter into Society</string>
    <string name="package_vendor_left_society">Cab has already Left the Society</string>
    <string name="expected_time_of_arrival_is_finished">Expected time of this arrival is finished</string>
    <string name="cab_state_code_hint">KA</string>
    <string name="cab_rto_number_hint">01</string>
    <string name="cab_serial_number_one_hint">AB</string>
    <string name="cab_serial_number_two_hint">1234</string>
    <string name="expected_arrival_notification_title">Expected Arrival Notification</string>
    <string name="expected_arrival_notification_message">Expected arrival notification has been sent to user.</string>
    <string name="expected_arrival_left_notification_message">Expected arrival left notification has been sent to user.</string>

    <!--Things Given Activity-->
    <string name="verify_things">Verify Things</string>
    <string name="resident_has_not_given_things_to_visitor">Resident has not given anything to Visitor</string>
    <string name="resident_has_given_things_to_visitor">Resident has given things to Visitor</string>
    <string name="resident_has_given_things_to_daily_service">Resident has given things to Daily Service</string>
    <string name="resident_has_not_given_things_to_daily_service">Resident has not given anything to Daily Service</string>
    <string name="ok">OK</string>

    <!--Society Member-->
    <string name="verify_resident">Verify Resident</string>
    <string name="family_member_list">Family Member List</string>
    <string name="name">Name:</string>
    <string name="apartment">Apartment</string>
    <string name="flat">Flat</string>
    <string name="no_member_in_this_flat">There are no members in this flat</string>
    <string name="not_ordered_any_packages">Members of this flat has not ordered any package</string>

    <!--Visitors And Daily Services Validation Status Activity-->
    <string name="visitor_validation_status">Visitor Validation Status</string>
    <string name="daily_service_validation_status">Daily Service Validation Status</string>

    <!--Expected Arrivals Validation Status Activity-->
    <string name="cab_driver_validation_status">Cab Driver Validation Status</string>
    <string name="package_vendor_validation_status">Package Vendor Validation Status</string>
    <string name="vendor">Vendor:</string>
    <string name="package_vendor_left">Package vendor Left</string>
    <string name="cab_driver_left">cab Driver Left</string>

    <!--Emergency Activity-->
    <string name="emergency_type">Emergency Type:</string>
    <string name="resident_name">Resident Name:</string>
    <string name="image_emergency">Image to indicate type of Emergency</string>
    <string name="no_emergency_message">Sorry, there\'s no Emergency alarm raised by any of the resident at the moment.</string>
    <string name="no_emergency_desc">Image to indicate currently no emergency alarm raised by any of the resident.</string>
    <string name="date">Date</string>
    <string name="Filter">Filter</string>
    <string name="search_flat_number_hint">Search Flat</string>
    <string name="search_flat_number">Search Flat number</string>
    <string name="recent_emergency">Recent Emergency</string>

    <!--Validation-->
    <string name="number_10digit_validation">Please Enter a valid 10 digit mobile number</string>
    <string name="field_cant_be_empty">Field can\'t be Empty</string>
    <string name="default_notification_channel_id">03</string>

    <!--Sign In Activity-->
    <string name="login">LOGIN</string>

    <!--OTP Activity-->
    <string name="phone_verification">Phone Verification</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="enter_verification_code">We need to verify your account. Please enter the 6 digit verification
    code sent to your mobile number.</string>
    <string name="auto_verification_completed">AutoVerification completed. Please wait while we check your Account in our system. . .</string>
    <string name="check_network_connection">Please check your Network Connection</string>
    <string name="wrong_otp_entered">Wrong OTP has been entered</string>
    <string name="waiting_for_otp">Waiting for OTP. . .</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="verifying_account">Verifying Account</string>
    <string name="login_error_message">Login Error Message</string>
    <string name="mobile_number_found">Mobile Number not found. Contact \'Admin\' to add your Mobile Number.</string>

    <!--E-Intercom-->
    <string name="daily_service_type">Daily Service Type</string>
    <!--Apartment Services Activity-->
    <string-array name="daily_services">
        <item>@string/cook</item>
        <item>@string/maid</item>
        <item>@string/car_bike_cleaning</item>
        <item>@string/child_day_care</item>
        <item>@string/daily_newspaper</item>
        <item>@string/milk_man</item>
        <item>@string/laundry</item>
        <item>@string/driver</item>
    </string-array>
    <string name="cook">Cook</string>
    <string name="maid">Maid</string>
    <string name="car_bike_cleaning">Car/Bike Cleaning</string>
    <string name="child_day_care">Child Day Care</string>
    <string name="daily_newspaper">Daily NewsPaper</string>
    <string name="milk_man">Milk Man</string>
    <string name="laundry">Laundry</string>
    <string name="driver">Driver</string>
    <string name="groceries">Groceries</string>

    <!--Vehicle Validation Activity-->
    <string name="vehicle_number">Vehicle Number</string>
    <string name="verify_vehicle">Verify Vehicle</string>

    <!--Vehicle Details Activity-->
    <string name="vehicle_details">Vehicle Details</string>
    <string name="owner_name">Owner Name:</string>
    <string name="vehicle_type">Vehicle Type:</string>

</resources>
