<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_base" />

    <RadioGroup
        android:id="@+id/radioFilterType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonApartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="false"
            android:text="@string/apartment"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/radioButtonFlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/flat" />

        <RadioButton
            android:id="@+id/radioButtonDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:checked="false"
            android:text="@string/date"
            tools:ignore="RtlHardcoded" />

    </RadioGroup>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>