<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nammaapartmentsecurityhome.gatenotification.VehicleValidation">

    <include layout="@layout/activity_base" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/animationWaitingToLoadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:indicatorColor="@color/nmBlack"
        app:indicatorName="BallSpinFadeLoaderIndicator" />

    <TextView
        android:id="@+id/textVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutVehicleNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/vehicle_number"
        android:textAllCaps="true"
        android:textColor="@color/nmBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layoutVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/editVehicleStateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cab_state_code_hint"
            android:inputType="textNoSuggestions|textCapCharacters"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editVehicleRtoNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cab_rto_number_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editVehicleSerialNumberOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cab_serial_number_one_hint"
            android:inputType="textNoSuggestions|textCapCharacters"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/editVehicleSerialNumberTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cab_serial_number_two_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <TextView
        android:id="@+id/textErrorVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutVehicleNumber"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/vehicle_number_validation"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonVerifyVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textErrorVehicleNumber"
        android:layout_margin="20dp"
        android:background="@color/nmBlack"
        android:text="@string/verify_vehicle"
        android:textAllCaps="true"
        android:textColor="@color/nmLightYellow"
        android:textSize="@dimen/button_default_size" />

</RelativeLayout>