<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutValidationSuccessful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/layoutProfilePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_success"
                android:src="@drawable/success" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/VisitorAndDailyServiceProfilePic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profile_pic" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVisitorOrDailyServiceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/visitor_name"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textFlatToVisit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/flat_to_visit"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textInvitedBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/invited_by"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTitleValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVisitorOrDailyServiceNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="Roshan Halwai"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textFlatToVisitValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="C504"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textInvitedByValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Rohit Mishra"
                    android:textColor="@color/nmBlack"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutValidationFailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_failed"
            android:src="@drawable/failed" />

        <TextView
            android:id="@+id/textInvalidVisitorOrDailyServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/invalid_visitor"
            android:textColor="@color/nmBlack"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAllowVisitorsAndEIntercom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/nmBlack"
        android:text="@string/allow_visitor"
        android:textAllCaps="true"
        android:textColor="@color/nmLightYellow"
        android:textSize="@dimen/button_default_size" />
</LinearLayout>